rt/rt_Deployment_rt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rt
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: rt
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: rt
    spec:
      containers:
      - env:
        - name: SERVER_NAME
          value: rt.ocf.berkeley.edu
        image: ghcr.io/ocf/rt:08d007f8b3ed3b2dc0405e24ceff32bc4574b610
        imagePullPolicy: IfNotPresent
        name: rt-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /opt/share/secrets/rt
          name: secrets
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
      volumes:
      - name: secrets
        secret:
          secretName: secret
