rt/rt_Service_rt.yaml
apiVersion: v1
kind: Service
metadata:
  name: rt
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    transpire.ocf.io/deployment: rt
