rt/rt_Ingress_rt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: rt
spec:
  ingressClassName: cilium
  rules:
  - host: rt.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: rt
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rt.ocf.berkeley.edu
    secretName: rt-tls
